# crewai-test

./: README.md  pyproject.toml
None/: email_proposals.csv  email_proposals.txt
db/: chroma.sqlite3
src/local_business_lookup_and_proposal_generator/: crew.py  main.py
src/local_business_lookup_and_proposal_generator/config/: agents.yaml  tasks.yaml
src/local_business_lookup_and_proposal_generator/tools/: custom_tool.py
